tests/baselines/reference/checkForObjectTooStrict.errors.txt
checkForObjectTooStrict.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
checkForObjectTooStrict.ts(3,18): error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module CommonJS.


==== checkForObjectTooStrict.ts (2 errors) ====
    module Foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        export class Object {
                     ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module CommonJS.
    
        }
    
    }
    
     
    
    class Bar extends Foo.Object { // should work
    
        constructor () {
    
            super();
    
        }
    
    }
    
    
    class Baz extends Object {
    
        constructor () { // ERROR, as expected
    
            super();
    
        }
    
    }
    